--- a/client/src/components/Navigation/Navigation.scss
+++ b/client/src/components/Navigation/Navigation.scss
@@ -1,16 +1,17 @@
 nav {
   display: flex;
   justify-content: center;
-  width: 100%;
   height: 60px;
 
   a {
     display: grid;
-    align-items: center;
+    place-items: center;
     background: linear-gradient(#0f7dcb, #0a68a2);
-    color: #eeeeee;
+    color: #ffffffe0;
     padding: 0 15px;
     font-weight: 700;
+    border-right: 2px solid #10578a;
+    box-shadow: inset #ffffff42 2px 0 3px 0.1px;
     
     &:first-child {
       border-top-left-radius: 9px;
@@ -20,6 +21,17 @@ nav {
     &:last-child {
       border-top-right-radius: 9px;
       border-bottom-right-radius: 9px;
+      border: none;
+    }
+
+    &:hover {
+      background: linear-gradient(#51a0d9, #136da5);
+      color: #ffffff;
+    }
+
+    &:active {
+      background: linear-gradient(#1d82cb, #176fa6);
+      box-shadow: inset #00000028 0 0 7px 0.1px;
     }
   }
 }
