feat: added upload image

--- a/client/src/pages/RegistrationPage/RegistrationPage.scss
+++ b/client/src/pages/RegistrationPage/RegistrationPage.scss
@@ -1,1 +1,1 @@
-@import '../AuthorizationPage/AuthorizationPage.scss';
+@import '../AuthorizationPage/AuthorizationPage.scss'; // Inputs inherit properties from here
