--- a/client/src/pages/AuthorizationPage/AuthorizationPage.scss
+++ b/client/src/pages/AuthorizationPage/AuthorizationPage.scss
@@ -1,3 +1,9 @@
+.is__auth__message {
+  display: grid;
+  place-content: center;
+  height: 75vh;
+}
+
 form {
   display: grid;
   place-content: center;
